[gd_scene load_steps=43 format=3 uid="uid://bdtdpx0d05sy3"]

[ext_resource type="Script" uid="uid://yibpus3whwuj" path="res://scripts/Player/multiplayer_controller_v2.gd" id="1_2bmmx"]
[ext_resource type="Script" uid="uid://cy1j38lpy671e" path="res://scripts/Player/multiplayer_input.gd" id="2_yq38j"]
[ext_resource type="Script" uid="uid://dhhn4ks2uixk8" path="res://scripts/Components/health.gd" id="3_8r42r"]
[ext_resource type="Script" uid="uid://4rpdmxp15xwq" path="res://scripts/Components/combat.gd" id="4_wikug"]
[ext_resource type="Script" uid="uid://bbh4tuowqkimv" path="res://scripts/Resources/AttackData.gd" id="5_p0pim"]
[ext_resource type="Resource" uid="uid://bu4qjy4hchjtl" path="res://resources/Player/Attacks/attack_1.tres" id="6_6k5jj"]
[ext_resource type="Resource" uid="uid://c1rvm2iod7263" path="res://resources/Player/Attacks/attack_2.tres" id="7_phe8a"]
[ext_resource type="Script" uid="uid://ys6acovxq2iq" path="res://scripts/Components/level.gd" id="8_7tsb7"]
[ext_resource type="Script" uid="uid://boxv5npw3xeg3" path="res://scripts/Player/player_hud.gd" id="9_rcfar"]
[ext_resource type="Script" uid="uid://71v08yv5tjrt" path="res://scripts/Components/stats.gd" id="9_yq38j"]
[ext_resource type="Script" uid="uid://dulwlk4wjgot3" path="res://scripts/Components/class.gd" id="10_8r42r"]
[ext_resource type="FontFile" uid="uid://4wxt0g33xdbi" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="10_eqe6f"]
[ext_resource type="Script" uid="uid://chuj37r7r0ydq" path="res://scripts/Components/debug.gd" id="11_fw2my"]
[ext_resource type="SpriteFrames" uid="uid://c05dyrlp5i5bj" path="res://resources/Player/SpriteFrames/Swordsman.tres" id="12_2bmmx"]
[ext_resource type="Script" uid="uid://dwv2k28spwfby" path="res://scripts/StateMachine/state_machine.gd" id="13_p3fel"]
[ext_resource type="FontFile" uid="uid://c8e0uior67hgl" path="res://assets/fonts/PixelOperator8.ttf" id="14_wikug"]
[ext_resource type="Script" uid="uid://d162wvxl3tos0" path="res://scripts/Player/StateMachine/attack.gd" id="14_x3jrl"]
[ext_resource type="Script" uid="uid://cqx4rs6bafi4b" path="res://scripts/Player/StateMachine/idle.gd" id="15_43wx8"]
[ext_resource type="Script" uid="uid://vfoesgffonwy" path="res://scripts/Player/StateMachine/fall.gd" id="16_7jf03"]
[ext_resource type="Script" uid="uid://c6oi0ebtiwt7l" path="res://scripts/Player/StateMachine/move.gd" id="17_yox3s"]
[ext_resource type="Script" uid="uid://vfu8l4cq1qt1" path="res://scripts/Player/StateMachine/jump.gd" id="18_25y7y"]
[ext_resource type="Script" uid="uid://bfh8yeyv2wu0g" path="res://scripts/Player/StateMachine/death.gd" id="19_26mlj"]
[ext_resource type="Script" uid="uid://bvunkdne8wduc" path="res://scripts/Player/StateMachine/hit.gd" id="20_6itok"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_2d20i"]
properties/0/path = NodePath(".:player_id")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:do_jump")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:direction")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath(".:do_drop")
properties/4/spawn = true
properties/4/replication_mode = 2
properties/5/path = NodePath(".:username")
properties/5/spawn = true
properties/5/replication_mode = 2
properties/6/path = NodePath("PlayerWorldHUD/PlayerNameLabel:text")
properties/6/spawn = true
properties/6/replication_mode = 2

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_80evv"]
properties/0/path = NodePath("InputSynchronizer:input_direction")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("InputSynchronizer:input_down")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("InputSynchronizer:sync_facing_direction")
properties/2/spawn = true
properties/2/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_x5q00"]
properties/0/path = NodePath("Health:max_health")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath("Health:current_health")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath("Leveling:experience")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath("Leveling:level")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath("Stats:current_strength")
properties/4/spawn = true
properties/4/replication_mode = 2
properties/5/path = NodePath("Stats:current_dexterity")
properties/5/spawn = true
properties/5/replication_mode = 2
properties/6/path = NodePath("Stats:current_intelligence")
properties/6/spawn = true
properties/6/replication_mode = 2
properties/7/path = NodePath("Stats:current_vitality")
properties/7/spawn = true
properties/7/replication_mode = 2
properties/8/path = NodePath("Class:current_class")
properties/8/spawn = true
properties/8/replication_mode = 2

[sub_resource type="Gradient" id="Gradient_2qjlr"]
colors = PackedColorArray(0.15, 0.15, 0.15, 1, 0.14902, 0.14902, 0.14902, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_7vu7v"]
gradient = SubResource("Gradient_2qjlr")
use_hdr = true

[sub_resource type="Gradient" id="Gradient_7vu7v"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_0r45a"]
gradient = SubResource("Gradient_7vu7v")
use_hdr = true

[sub_resource type="Gradient" id="Gradient_x6dh1"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3myi5"]
gradient = SubResource("Gradient_x6dh1")
use_hdr = true

[sub_resource type="Gradient" id="Gradient_x5q00"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 1, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_2qjlr"]
gradient = SubResource("Gradient_x5q00")
use_hdr = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2qjlr"]
bg_color = Color(0.0748453, 0.0748453, 0.0748452, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vu7v"]
bg_color = Color(0.113049, 0.113049, 0.113049, 0.666667)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0r45a"]
bg_color = Color(0, 0, 0, 0.666667)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v00ed"]
bg_color = Color(0.168627, 0.168627, 0.168627, 0.882353)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sps0x"]
bg_color = Color(0.0866292, 0.0866293, 0.0866292, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j1suo"]
bg_color = Color(1, 0.0784314, 0.12549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sps0x"]
size = Vector2(100, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_h0wtf"]
radius = 5.0

[node name="SwordsmanPlayer" type="CharacterBody2D" node_paths=PackedStringArray("health_component", "combat_component", "level_component", "stats_component", "class_component", "debug_component", "player_HUD", "player_name_label") groups=["networked_entities"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_2bmmx")
health_component = NodePath("Components/Health")
combat_component = NodePath("Components/Combat")
level_component = NodePath("Components/Leveling")
stats_component = NodePath("Components/Stats")
class_component = NodePath("Components/Class")
debug_component = NodePath("CanvasLayer/Debug")
player_HUD = NodePath("CanvasLayer/PlayerHUD")
player_name_label = NodePath("PlayerWorldHUD/PlayerNameLabel")

[node name="PlayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
delta_interval = 0.05
replication_config = SubResource("SceneReplicationConfig_2d20i")
visibility_update_mode = 1

[node name="InputSynchronizer" type="MultiplayerSynchronizer" parent="."]
unique_name_in_owner = true
delta_interval = 0.05
replication_config = SubResource("SceneReplicationConfig_80evv")
script = ExtResource("2_yq38j")

[node name="Components" type="Node" parent="."]

[node name="ComponentSynchronizer" type="MultiplayerSynchronizer" parent="Components"]
replication_config = SubResource("SceneReplicationConfig_x5q00")

[node name="Leveling" type="Node" parent="Components"]
script = ExtResource("8_7tsb7")

[node name="Stats" type="Node" parent="Components"]
script = ExtResource("9_yq38j")

[node name="Health" type="Node" parent="Components"]
script = ExtResource("3_8r42r")
health_bar_path = NodePath("../../PlayerWorldHUD/HealthBar")

[node name="Class" type="Node" parent="Components"]
script = ExtResource("10_8r42r")

[node name="Combat" type="Node" parent="Components" node_paths=PackedStringArray("attack_hitbox")]
script = ExtResource("4_wikug")
attack_map = Dictionary[String, ExtResource("5_p0pim")]({
"attack_1": ExtResource("6_6k5jj"),
"attack_2": ExtResource("7_phe8a")
})
attack_hitbox = NodePath("../../Hitbox/BasicAttackHitbox")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerHUD" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("9_rcfar")

[node name="BottomStatsContainer" type="Control" parent="CanvasLayer/PlayerHUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HealthBar" type="TextureProgressBar" parent="CanvasLayer/PlayerHUD/BottomStatsContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -143.0
offset_right = -5.0
offset_bottom = -103.0
grow_horizontal = 2
grow_vertical = 0
value = 38.0
nine_patch_stretch = true
texture_under = SubResource("GradientTexture1D_7vu7v")
texture_progress = SubResource("GradientTexture1D_0r45a")

[node name="HPLabel" type="Label" parent="CanvasLayer/PlayerHUD/BottomStatsContainer/HealthBar"]
layout_mode = 0
offset_left = 9.0
offset_top = -14.0
offset_right = 73.0
offset_bottom = 18.0
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("10_eqe6f")
theme_override_font_sizes/font_size = 32
text = "HP"

[node name="HPValueLabel" type="Label" parent="CanvasLayer/PlayerHUD/BottomStatsContainer/HealthBar"]
layout_mode = 0
offset_left = 136.0
offset_top = -13.0
offset_right = 386.0
offset_bottom = 19.0
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("10_eqe6f")
theme_override_font_sizes/font_size = 24
text = "100/100"
horizontal_alignment = 2

[node name="ManaBar" type="TextureProgressBar" parent="CanvasLayer/PlayerHUD/BottomStatsContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -143.0
offset_right = 400.0
offset_bottom = -103.0
grow_horizontal = 2
grow_vertical = 0
value = 38.0
nine_patch_stretch = true
texture_under = SubResource("GradientTexture1D_7vu7v")
texture_progress = SubResource("GradientTexture1D_3myi5")

[node name="MPLabel" type="Label" parent="CanvasLayer/PlayerHUD/BottomStatsContainer/ManaBar"]
layout_mode = 0
offset_left = 9.0
offset_top = -14.0
offset_right = 73.0
offset_bottom = 18.0
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("10_eqe6f")
theme_override_font_sizes/font_size = 32
text = "MP"

[node name="MPValueLabel" type="Label" parent="CanvasLayer/PlayerHUD/BottomStatsContainer/ManaBar"]
layout_mode = 0
offset_left = 136.0
offset_top = -13.0
offset_right = 386.0
offset_bottom = 19.0
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("10_eqe6f")
theme_override_font_sizes/font_size = 24
text = "100/100"
horizontal_alignment = 2

[node name="ExperienceBar" type="TextureProgressBar" parent="CanvasLayer/PlayerHUD/BottomStatsContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -84.0
offset_right = 400.0
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 0
value = 38.0
nine_patch_stretch = true
texture_under = SubResource("GradientTexture1D_7vu7v")
texture_progress = SubResource("GradientTexture1D_2qjlr")

[node name="LevelPanel" type="Panel" parent="CanvasLayer/PlayerHUD/BottomStatsContainer/ExperienceBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -12.5
offset_bottom = 37.5
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2qjlr")

[node name="LevelLabel" type="RichTextLabel" parent="CanvasLayer/PlayerHUD/BottomStatsContainer/ExperienceBar/LevelPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("10_eqe6f")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "LV.[color=yellow]1[/color]"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="EXPLabel" type="Label" parent="CanvasLayer/PlayerHUD/BottomStatsContainer/ExperienceBar"]
layout_mode = 0
offset_left = 9.0
offset_top = -13.0
offset_right = 81.0
offset_bottom = 19.0
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("10_eqe6f")
theme_override_font_sizes/font_size = 24
text = "EXP"

[node name="EXPPercentLabel" type="RichTextLabel" parent="CanvasLayer/PlayerHUD/BottomStatsContainer/ExperienceBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 8
theme_override_fonts/normal_font = ExtResource("10_eqe6f")
theme_override_font_sizes/normal_font_size = 16
text = "38%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MobileButtons" type="Control" parent="CanvasLayer/PlayerHUD"]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="LeftButton" type="Button" parent="CanvasLayer/PlayerHUD/MobileButtons"]
layout_mode = 0
offset_left = 89.0
offset_top = -165.0
offset_right = 233.0
offset_bottom = -21.0
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_7vu7v")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0r45a")
theme_override_styles/normal = SubResource("StyleBoxFlat_7vu7v")

[node name="Label" type="Label" parent="CanvasLayer/PlayerHUD/MobileButtons/LeftButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 100
text = "<"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightButton" type="Button" parent="CanvasLayer/PlayerHUD/MobileButtons"]
layout_mode = 0
offset_left = 324.0
offset_top = -165.0
offset_right = 468.0
offset_bottom = -21.0
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_7vu7v")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0r45a")
theme_override_styles/normal = SubResource("StyleBoxFlat_7vu7v")

[node name="Label" type="Label" parent="CanvasLayer/PlayerHUD/MobileButtons/RightButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 100
text = ">"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackButton" type="Button" parent="CanvasLayer/PlayerHUD/MobileButtons"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -340.0
offset_top = -165.0
offset_right = -196.0
offset_bottom = -21.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_7vu7v")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0r45a")
theme_override_styles/normal = SubResource("StyleBoxFlat_7vu7v")

[node name="Label" type="Label" parent="CanvasLayer/PlayerHUD/MobileButtons/AttackButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "Attack"
horizontal_alignment = 1
vertical_alignment = 1

[node name="JumpButton" type="Button" parent="CanvasLayer/PlayerHUD/MobileButtons"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -165.0
offset_right = -36.0
offset_bottom = -21.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_7vu7v")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0r45a")
theme_override_styles/normal = SubResource("StyleBoxFlat_7vu7v")

[node name="Label" type="Label" parent="CanvasLayer/PlayerHUD/MobileButtons/JumpButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "Jump"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SlideButton" type="Button" parent="CanvasLayer/PlayerHUD/MobileButtons"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -165.0
offset_right = -356.0
offset_bottom = -21.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_7vu7v")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0r45a")
theme_override_styles/normal = SubResource("StyleBoxFlat_7vu7v")

[node name="Label" type="Label" parent="CanvasLayer/PlayerHUD/MobileButtons/SlideButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "Slide"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Debug" type="Panel" parent="CanvasLayer"]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -400.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 240.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_v00ed")
script = ExtResource("11_fw2my")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Debug"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -100.0
offset_right = 180.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Debug/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("10_eqe6f")
theme_override_font_sizes/font_size = 24
text = "DEBUG BUTTONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DebugHeal" type="Button" parent="CanvasLayer/Debug/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_fonts/font = ExtResource("10_eqe6f")
theme_override_font_sizes/font_size = 16
text = "Heal 5"

[node name="DebugDamage" type="Button" parent="CanvasLayer/Debug/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_fonts/font = ExtResource("10_eqe6f")
theme_override_font_sizes/font_size = 16
text = "Damage 10"

[node name="DebugRevive" type="Button" parent="CanvasLayer/Debug/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_fonts/font = ExtResource("10_eqe6f")
theme_override_font_sizes/font_size = 16
text = "Revive"

[node name="PlayerWorldHUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerNameLabel" type="RichTextLabel" parent="PlayerWorldHUD"]
layout_mode = 0
offset_left = -50.0
offset_top = -38.0
offset_right = 50.0
offset_bottom = -13.0
scale = Vector2(0.7, 0.7)
pivot_offset = Vector2(50, 12.5)
theme_override_constants/outline_size = 4
theme_override_fonts/normal_font = ExtResource("14_wikug")
theme_override_font_sizes/normal_font_size = 8
text = "PLAYERNAME"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1
drag_and_drop_selection_enabled = false

[node name="HealthBar" type="ProgressBar" parent="PlayerWorldHUD"]
visible = false
layout_mode = 0
offset_left = -11.0
offset_top = -37.0
offset_right = 89.0
offset_bottom = -27.0
scale = Vector2(0.225, 0.225)
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_sps0x")
theme_override_styles/fill = SubResource("StyleBoxFlat_j1suo")
step = 1.0
value = 73.0
show_percentage = false

[node name="DebugStateLabel" type="Label" parent="PlayerWorldHUD"]
visible = false
layout_mode = 0
offset_left = -20.0
offset_top = -46.0
offset_right = 20.0
offset_bottom = -37.0
theme_override_fonts/font = ExtResource("10_eqe6f")
theme_override_font_sizes/font_size = 8
text = "State"
horizontal_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -20)
scale = Vector2(1.3, 1.3)
sprite_frames = ExtResource("12_2bmmx")
animation = &"idle"
autoplay = "idle"

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8
monitoring = false

[node name="BasicAttackHitbox" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(46, -8)
shape = SubResource("RectangleShape2D_sps0x")

[node name="StandingCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_h0wtf")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -16)
zoom = Vector2(4, 4)
process_callback = 0
limit_bottom = 120
position_smoothing_enabled = true

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="DropTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AttackStateTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="AttackHitboxTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state", "state_label")]
script = ExtResource("13_p3fel")
starting_state = NodePath("idle")
state_label = NodePath("../PlayerWorldHUD/DebugStateLabel")

[node name="attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "fall_state")]
script = ExtResource("14_x3jrl")
idle_state = NodePath("../idle")
fall_state = NodePath("../fall")
max_combo_steps = 1
animation_name = "attack_1"

[node name="idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("jump_state", "fall_state", "move_state", "attack_state")]
script = ExtResource("15_43wx8")
jump_state = NodePath("../jump")
fall_state = NodePath("../fall")
move_state = NodePath("../move")
attack_state = NodePath("../attack")
animation_name = "idle"

[node name="fall" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "move_state", "jump_state", "attack_state")]
script = ExtResource("16_7jf03")
idle_state = NodePath("../idle")
move_state = NodePath("../move")
jump_state = NodePath("../jump")
attack_state = NodePath("../attack")
animation_name = "fall"

[node name="move" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "fall_state", "jump_state", "attack_state")]
script = ExtResource("17_yox3s")
idle_state = NodePath("../idle")
fall_state = NodePath("../fall")
jump_state = NodePath("../jump")
attack_state = NodePath("../attack")
animation_name = "move"

[node name="jump" type="Node" parent="StateMachine" node_paths=PackedStringArray("fall_state", "attack_state")]
script = ExtResource("18_25y7y")
fall_state = NodePath("../fall")
attack_state = NodePath("../attack")
animation_name = "jump"

[node name="death" type="Node" parent="StateMachine" node_paths=PackedStringArray("respawn_state")]
script = ExtResource("19_26mlj")
respawn_state = NodePath("../idle")
animation_name = "death"

[node name="hit" type="Node" parent="StateMachine"]
script = ExtResource("20_6itok")
animation_name = "hit"

[connection signal="button_down" from="CanvasLayer/PlayerHUD/MobileButtons/LeftButton" to="InputSynchronizer" method="_on_left_button_button_down"]
[connection signal="button_up" from="CanvasLayer/PlayerHUD/MobileButtons/LeftButton" to="InputSynchronizer" method="_on_left_button_button_up"]
[connection signal="button_down" from="CanvasLayer/PlayerHUD/MobileButtons/RightButton" to="InputSynchronizer" method="_on_right_button_button_down"]
[connection signal="button_up" from="CanvasLayer/PlayerHUD/MobileButtons/RightButton" to="InputSynchronizer" method="_on_right_button_button_up"]
[connection signal="pressed" from="CanvasLayer/PlayerHUD/MobileButtons/AttackButton" to="InputSynchronizer" method="_on_attack_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PlayerHUD/MobileButtons/JumpButton" to="InputSynchronizer" method="_on_jump_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PlayerHUD/MobileButtons/SlideButton" to="InputSynchronizer" method="_on_slide_button_pressed"]
[connection signal="body_entered" from="Hitbox" to="Components/Combat" method="_on_hitbox_body_entered"]
